tests/spec/lex/snapshots/struct_with_generics.snap
---
source: tests/spec/lex/mod.rs
description: |
  
  struct Container<T> {
    value: T,
  }
---
LexResult {
    tokens: [
        Token {
            kind: Struct,
            text: "struct",
            byte_offset: 1,
            byte_length: 6,
        },
        Token {
            kind: Identifier,
            text: "Container",
            byte_offset: 8,
            byte_length: 9,
        },
        Token {
            kind: LeftAngleBracket,
            text: "<",
            byte_offset: 17,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "T",
            byte_offset: 18,
            byte_length: 1,
        },
        Token {
            kind: RightAngleBracket,
            text: ">",
            byte_offset: 19,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 21,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "value",
            byte_offset: 25,
            byte_length: 5,
        },
        Token {
            kind: Colon,
            text: ":",
            byte_offset: 30,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "T",
            byte_offset: 32,
            byte_length: 1,
        },
        Token {
            kind: Comma,
            text: ",",
            byte_offset: 33,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 35,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: "",
            byte_offset: 36,
            byte_length: 0,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 37,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
