tests/spec/lex/snapshots/try_block.snap
---
source: tests/spec/lex/mod.rs
description: |
  
  let result = try {
    risky()?
  };
---
LexResult {
    tokens: [
        Token {
            kind: Let,
            text: "let",
            byte_offset: 1,
            byte_length: 3,
        },
        Token {
            kind: Identifier,
            text: "result",
            byte_offset: 5,
            byte_length: 6,
        },
        Token {
            kind: Equal,
            text: "=",
            byte_offset: 12,
            byte_length: 1,
        },
        Token {
            kind: Try,
            text: "try",
            byte_offset: 14,
            byte_length: 3,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 18,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "risky",
            byte_offset: 22,
            byte_length: 5,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 27,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 28,
            byte_length: 1,
        },
        Token {
            kind: QuestionMark,
            text: "?",
            byte_offset: 29,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 31,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: ";",
            byte_offset: 32,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 34,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
