tests/spec/lex/snapshots/try_keyword.snap
---
source: tests/spec/lex/mod.rs
description: try
---
LexResult {
    tokens: [
        Token {
            kind: Try,
            text: "try",
            byte_offset: 0,
            byte_length: 3,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 3,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
