tests/spec/lex/snapshots/type_alias.snap
---
source: tests/spec/lex/mod.rs
description: |
  
  type UserId = int;
---
LexResult {
    tokens: [
        Token {
            kind: Type,
            text: "type",
            byte_offset: 1,
            byte_length: 4,
        },
        Token {
            kind: Identifier,
            text: "UserId",
            byte_offset: 6,
            byte_length: 6,
        },
        Token {
            kind: Equal,
            text: "=",
            byte_offset: 13,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "int",
            byte_offset: 15,
            byte_length: 3,
        },
        Token {
            kind: Semicolon,
            text: ";",
            byte_offset: 18,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 20,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
