tests/spec/lex/snapshots/type_keyword.snap
---
source: tests/spec/lex/mod.rs
description: type
---
LexResult {
    tokens: [
        Token {
            kind: Type,
            text: "type",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
