tests/spec/lex/snapshots/unicode_chinese.snap
---
source: tests/spec/lex/mod.rs
description: "let 北京 = \"Beijing\""
---
LexResult {
    tokens: [
        Token {
            kind: Let,
            text: "let",
            byte_offset: 0,
            byte_length: 3,
        },
        Token {
            kind: Identifier,
            text: "北京",
            byte_offset: 4,
            byte_length: 6,
        },
        Token {
            kind: Equal,
            text: "=",
            byte_offset: 11,
            byte_length: 1,
        },
        Token {
            kind: String,
            text: "\"Beijing\"",
            byte_offset: 13,
            byte_length: 9,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 22,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
