tests/spec/lex/snapshots/unicode_mixed_with_ascii.snap
---
source: tests/spec/lex/mod.rs
description: "fn polar(r: float64, θ: float64) -> complex128"
---
LexResult {
    tokens: [
        Token {
            kind: Function,
            text: "fn",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "polar",
            byte_offset: 3,
            byte_length: 5,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 8,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "r",
            byte_offset: 9,
            byte_length: 1,
        },
        Token {
            kind: Colon,
            text: ":",
            byte_offset: 10,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "float64",
            byte_offset: 12,
            byte_length: 7,
        },
        Token {
            kind: Comma,
            text: ",",
            byte_offset: 19,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "θ",
            byte_offset: 21,
            byte_length: 2,
        },
        Token {
            kind: Colon,
            text: ":",
            byte_offset: 23,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "float64",
            byte_offset: 25,
            byte_length: 7,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 32,
            byte_length: 1,
        },
        Token {
            kind: Arrow,
            text: "->",
            byte_offset: 34,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "complex128",
            byte_offset: 37,
            byte_length: 10,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 47,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
