tests/spec/lex/snapshots/unsupported_hash_delimited_in_fstring_interpolation.snap
---
source: tests/spec/lex/mod.rs
description: "f\"{r#\"abc\"#}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 2,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 11,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 12,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 13,
            byte_length: 0,
        },
    ],
    errors: [
        ParseError {
            message: "Hash-delimited raw strings are not supported",
            labels: [
                (
                    Span {
                        file_id: 0,
                        byte_offset: 3,
                        byte_length: 8,
                    },
                    "not yet implemented",
                ),
            ],
            help: Some(
                "Hash-delimited raw strings (`r#\"...\"#`) are not yet implemented. For now, use a regular string with escaped quotes",
            ),
            note: None,
            code: "lex.unsupported_hash_delimited_raw_string",
            fix: None,
        },
    ],
    blank_lines: [],
}
